--- a/index.html
+++ b/index.html
@@ -10,35 +10,57 @@
   <link rel="shortcut icon" href="./src/assets/favicon/Favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./src/styles/main.css">
   <link rel="stylesheet" href="./src/styles/_containers_and_frames.css">
+  <link rel="stylesheet" href="./src/styles/_button.css">
   <title>Yu-Gi-Oh Jo-Ken-Po Edition</title>
 </head>
 
 <body>
 
-  <div class="bg-video-wrapper">
-    <video class="bg-video" autoplay loop muted>
+  <div class="bg-video-container">
+    <video id="bg-video" autoplay loop muted>
       <source src="./src/assets/video/yugi.mp4" type="">
     </video>
   </div>
   <main class="container">
-    <div class="container__left framed-golden-2">
-      <section class="score_box frame">
-        <span id="score_points">Win: 0 | Lose: 0</span>
+    <div class="container-left framed-golden-2">
+
+      <section class="score-box frame">
+        <span id="Win" class="score-points">Win: 0 | </span>
+        <span id="lose">Lose: 0</span>
       </section>
+   
       <figure class="card-avatar">
         <img id="card-image" alt="carta Yu-Gi-Oh">
       </figure>
-      <div class="card_details frame">
+
+      <div class="card-details frame">
         <h2 id="card-name">card name</h2>
         <p id="card-type">card type</p>
       </div>
 
     </div>
-    <div class="container__right">
-      <div class="card__container">
+    <div class="container-right">
+      <div class="card-box-container">
         <div id="computer-cards" class="card-box framed">
         </div>
         <div class="card-versus">
+
+          <div class="versus-top">
+            <div class="card-infield">
+              <img  alt="" id="player-field-card">
+            </div>
+
+            <img class="versus-img" src="/src/assets/icons/millenium2.png" alt="">
+          
+            <div class="card-infield">
+              <img  alt="" id="computer-field-card">
+            </div>
+          </div>
+
+          <div class="versus-bottom">
+            <button id="next-duel" class="rpgui-button">Ganhou</button> 
+          </div>
+
         </div>
         <div id="player-cards" class="card-box framed">
         </div>
