finish container right style setup and init js

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="container-left framed-golden-2">
 
       <section class="score-box frame">
-        <span id="Win" class="score-points">Win: 0 | </span>
-        <span id="lose">Lose: 0</span>
+        <span id="Win" class="score-points">Win: 0 </span>
+        <span id="lose" class="score-points">Lose: 0</span>
       </section>
    
       <figure class="card-avatar">
@@ -39,8 +39,10 @@
       </div>
 
     </div>
+
     <div class="container-right">
       <div class="card-box-container">
+        
         <div id="computer-cards" class="card-box framed">
         </div>
         <div class="card-versus">
