add drawcards, card hover and setFieldCards

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./src/assets/favicon/Favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./src/styles/main.css">
   <link rel="stylesheet" href="./src/styles/_containers_and_frames.css">
   <link rel="stylesheet" href="./src/styles/_button.css">
+  <link rel="stylesheet" href="./src/styles/main.css">
   <title>Yu-Gi-Oh Jo-Ken-Po Edition</title>
 </head>
 
@@ -18,24 +18,24 @@
 
   <div class="bg-video-container">
     <video id="bg-video" autoplay loop muted>
-      <source src="./src/assets/video/yugi.mp4" type="">
+      <source src="./src/assets/video/yugi.mp4" type="video/mp4">
     </video>
   </div>
   <main class="container">
     <div class="container-left framed-golden-2">
 
       <section class="score-box frame">
-        <span id="Win" class="score-points">Win: 0 </span>
-        <span id="lose" class="score-points">Lose: 0</span>
+        <span id="Win" class="score-points">Win:0 </span>
+        <span id="lose" class="score-points">Lose:0</span>
       </section>
    
       <figure class="card-avatar">
-        <img id="card-image" alt="carta Yu-Gi-Oh">
+        <img id="card-image" alt="">
       </figure>
 
       <div class="card-details frame">
-        <h2 id="card-name">card name</h2>
-        <p id="card-type">card type</p>
+        <h2 id="card-name">Select</h2>
+        <p id="card-type">a card</p>
       </div>
 
     </div>
@@ -50,7 +50,7 @@
           <div class="versus-top">
             <div class="card-infield">
               <img  alt="" id="player-field-card">
-            </div>
+            </div> 
 
             <img class="versus-img" src="/src/assets/icons/millenium2.png" alt="">
           
@@ -60,7 +60,7 @@
           </div>
 
           <div class="versus-bottom">
-            <button id="next-duel" class="rpgui-button">Ganhou</button> 
+            <button id="next-duel" class="rpgui-button">placeholder</button> 
           </div>
 
         </div>
