add functions to clearDrawCards, checkResults, updateScore, DrawButton and resetDuel

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container-left framed-golden-2">
 
       <section class="score-box frame">
-        <span id="Win" class="score-points">Win:0 </span>
+        <span id="win" class="score-points">Win:0 </span>
         <span id="lose" class="score-points">Lose:0</span>
       </section>
    
