--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
 <body>
 
+  <audio id="bg-music">
+    <source src="./src/assets/audio/egyptian_duel.mp3" type="audio/mp3">
+  </audio>
+
   <div class="bg-video-container">
     <video id="bg-video" autoplay loop muted>
       <source src="./src/assets/video/yugi.mp4" type="video/mp4">
